--- a/src/Containers/LandingPage/LandingPage.module.css
+++ b/src/Containers/LandingPage/LandingPage.module.css
@@ -25,3 +25,43 @@
   gap: 1rem;
   margin-top: 3rem;
 }
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+  .container {
+    padding: 24px;
+  }
+
+  .innerContainer > h4 {
+    font-size: 40px;
+  }
+
+  .buttonContainer {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 3rem;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .container {
+    padding: 0;
+  }
+
+  .innerContainer {
+    width: 100%;
+    padding: 0 16px;
+  }
+
+  .innerContainer > h4 {
+    font-size: 40px;
+  }
+
+  .buttonContainer {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-top: 3rem;
+    width: 100%;
+  }
+}
