--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,20 @@
   font-style: italic;
 }
 
+@font-face {
+  font-family: Futura;
+  src: url("/src/Assets/Fonts/futura/futura medium bt.ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Futura;
+  src: url("/src/Assets/Fonts/futura/Futura Medium Italic font.ttf");
+  font-weight: 500;
+  font-style: italic;
+}
+
 body {
   margin: 0;
   font-family: Lato, Futura -apple-system, BlinkMacSystemFont, "Segoe UI",
