--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
 }
 
@@ -13,7 +13,7 @@
   height: calc(100vh - 100px);
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 767px) and (max-width: 1023px) {
   .container {
     min-height: 100vh;
   }
@@ -24,5 +24,21 @@
 
   .body {
     min-height: calc(100vh - 80px);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .container {
+    min-height: 100vh;
+    height: auto;
+  }
+
+  .header {
+    height: 80px;
+  }
+
+  .body {
+    /* min-height: calc(100vh - 80px); */
+    height: auto;
   }
 }
