--- a/src/Containers/LandingPage/LandingPage.module.css
+++ b/src/Containers/LandingPage/LandingPage.module.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  min-height: calc(100vh - 80px);
 }
 
 .innerContainer > h4 {
