added the new updates on the fields and the account details

--- a/src/Containers/RegistrationForm/RegistrationForm.module.css
+++ b/src/Containers/RegistrationForm/RegistrationForm.module.css
@@ -41,12 +41,13 @@
 .ticketCategories {
   color: #fff;
   font-family: Futura;
-  font-size: 14px;
+  font-size: 16px;
   font-style: italic;
   font-weight: 400;
   line-height: normal;
   margin-bottom: 1rem;
   display: block;
+  color: #c6aa58;
 }
 
 .ticketCategories > a {
