made changes on the site wth the acct info page, the 8 ball images

--- a/src/Containers/RegistrationForm/RegistrationForm.module.css
+++ b/src/Containers/RegistrationForm/RegistrationForm.module.css
@@ -81,6 +81,7 @@
 @media screen and (max-width: 767px) {
   .container {
     padding: 24px 16px;
+    background-image: url("../../Assets/Images/eclipse2.jpeg");
   }
 
   .container > h4 {
