--- a/src/Containers/Header/Header.module.css
+++ b/src/Containers/Header/Header.module.css
@@ -5,7 +5,7 @@
 }
 
 .container > img {
-  width: 200px;
+  /* width: 200px; */
   height: 100%;
 }
 
@@ -14,19 +14,19 @@
     height: 100%;
     padding: 0 16px;
   }
-
-  .container > img {
-    width: 150px;
-  }
 }
 
 @media screen and (max-width: 767px) {
   .container {
     height: 100%;
     padding: 0 16px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
   }
 
   .container > img {
-    width: 150px;
+    width: 180px;
+    height: 80%;
   }
 }
